@@ -19,6 +19,13 @@ two
 --- multilog handles literal +
 one
 0
+--- multilog handles fnmatch -
+0
+--- multilog handles fnmatch +
+one
+two
+one two
+0
 --- multilog handles long lines for stderr
 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678
 0
